--- a/eureka-server.properties
+++ b/eureka-server.properties
@@ -1,8 +1,5 @@
-spring.application.name=microservice-assure
-server.port=9999
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/previt_db?serverTimezone=Europe/Paris&zeroDateTimeBehavior=CONVERT_TO_NULL
-spring.datasource.username=gpdc_marie
-spring.datasource.password=1234
-urbanisation-si.clairprev.limiteNombreProduit=3
+server.port=9001
+eureka.client.registerWithEureka=false
+eureka.client.fetchRegistry=false
+#Ajout pour le rafraichissement
+eureka.server.enableSelfPreservation=false   eureka.client.serviceUrl.defaultZone=http://localhost:9001/eureka/
