--- a/eureka-server.properties
+++ b/eureka-server.properties
@@ -2,4 +2,5 @@ server.port=9100
 eureka.client.registerWithEureka=false
 eureka.client.fetchRegistry=false
 #Ajout pour le rafraichissement
-eureka.server.enableSelfPreservation=false   eureka.client.serviceUrl.defaultZone=http://localhost:9100/eureka/
+eureka.server.enableSelfPreservation=false
+eureka.client.serviceUrl.defaultZone=http://localhost:9100/eureka/
