--- a/microservice-produit.properties
+++ b/microservice-produit.properties
@@ -1,8 +1,10 @@
 spring.application.name=microservice-produit
-server.port=9999
+server.port=9997
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/previt_db?serverTimezone=Europe/Paris&zeroDateTimeBehavior=CONVERT_TO_NULL
 spring.datasource.username=gpdc_marie
 spring.datasource.password=1234
 urbanisation-si.clairprev.limiteNombreProduit=3
+#Eureka
+eureka.client.serviceUrl.defaultZone=http://localhost:9005/eureka/
