--- a/microservice-contrat.properties
+++ b/microservice-contrat.properties
@@ -1,4 +1,4 @@
-spring.application.name=microservice-contrat
+#spring.application.name=microservice-contrat
 #server.port=9997
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -7,4 +7,4 @@ spring.datasource.username=gpdc_marie
 spring.datasource.password=1234
 urbanisation-si.clairprev.limiteNombreContrat=3
 #Eureka
-eureka.client.serviceUrl.defaultZone=http://localhost:9005/eureka/
+eureka.client.serviceUrl.defaultZone=http://localhost:9001/eureka/
