--- a/microservice-ui.properties
+++ b/microservice-ui.properties
@@ -1,4 +1,4 @@
-spring.application.name=microservice-ui
+#spring.application.name=microservice-ui
 #server.port=9995
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -6,4 +6,4 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/previt_db?server
 spring.datasource.username=gpdc_marie
 spring.datasource.password=1234
 #Eureka
-eureka.client.serviceUrl.defaultZone=http://localhost:9005/eureka/
+eureka.client.serviceUrl.defaultZone=http://localhost:9001/eureka/
